# cmake_gtest_example

./: CMakeLists.txt  README.md  cmake_adderConfig.h.in  main.cpp
Adder/: Adder.cpp  Adder.h  CMakeLists.txt
test/: AdderTest.cpp  CMakeLists.txt
